# ghostfreeHDR

./: CMakeLists.txt  README.md  README.txt  build.sh  main.cpp  merge_Karaduzovic_set1.sh  merge_Karaduzovic_set3.sh  merge_Tursun_105.sh  merge_Tursun_76.sh  merge_Tursun_FastCars.sh  merge_Tursun_Shop2.sh  merge_bmw_x5.sh  merge_fabia.sh  merge_horse.sh  merge_sandero.sh
images/Tursun_105/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
images/Tursun_76/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
images/Tursun_FastCars/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
images/Tursun_Shop2/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
inc/: block_bilateral.hpp  hdrlib.hpp  hdrlib_base.hpp  hdrlib_certainty_merge_uni.hpp  hdrlib_certainty_merge_uni_bayer.hpp  hdrlib_composer_intf.hpp  hdrlib_core.hpp  hdrlib_debayer.hpp  hdrlib_ldrim.hpp  hdrlib_merge.hpp  hdrlib_opencv.hpp  hdrlib_tonemap_durand.hpp  hdrlib_tonemap_intf.hpp  python_spec.hpp
src/: block_bilateral.cpp  hdrlib_certainty_merge_uni.cpp  hdrlib_certainty_merge_uni_bayer.cpp  hdrlib_core.cpp  hdrlib_debayer.cpp  hdrlib_merge.cpp  hdrlib_tonemap_durand.cpp
